frontend/src/container/NewWidget/LeftContainer/QuerySection/QuerySection.styles.scss
.dashboard-navigation {
	.ant-tabs-tab {
		border: none !important;
		margin-left: 0px !important;
		padding: 0px !important;

		.nav-btns {
			display: flex;
			align-items: center;
			justify-content: center;

			.prom-ql-icon {
				height: 14px;
				width: 14px;
			}
		}
		.ant-btn-default {
			border-color: transparent;
		}
	}
	.ant-tabs-tab-active {
		.nav-btns {
			background: var(--bg-slate-400) !important;
		}
	}

	.ant-tabs-nav {
		margin: 0px;
		margin-bottom: 0.5rem;
	}
	.ant-tabs-nav::before {
		border-bottom: none !important;
	}
	.ant-tabs-nav-list {
		border: 1px solid var(--bg-slate-200);
	}
	.ant-tabs-tab + .ant-tabs-tab {
		border-left: 1px solid var(--bg-slate-200) !important;
	}
	.stage-run-query {
		display: flex;
		align-items: center;
	}
}

.lightMode {
	.dashboard-navigation {
		.ant-tabs-nav-list {
			border: 1px solid var(--bg-vanilla-300);
		}
		.ant-tabs-tab + .ant-tabs-tab {
			border-left: 1px solid var(--bg-vanilla-200) !important;
		}
		.ant-tabs-tab-active {
			.nav-btns {
				background: var(--bg-vanilla-300) !important;
			}
		}
	}
}

